# jvh

./: .gitignore  CMakeLists.txt  README.adoc
capture/src/: CMakeLists.txt  stream_capture.cc  v4l2_capture.cc
capture/src/include/: stream_capture.h
protobuf/: CMakeLists.txt  videostream.proto
run/: CMakeLists.txt  main.cc
server-jvh/: CMakeLists.txt
server-jvh/src/: '  :w  CMakeLists.txt  av_util.cc  client.cc  client_tcp.cc  client_websocket.cc  encode.cc  encoder.cc  frame_queue.cc  main.cc  net_stream.cc  queue.cc  server.cc  stream_encoded.cc  video_source_comm.cc  videostream.cc
server-jvh/src/private_include/: av_util.h  client.h  client_net.h  client_tcp.h  client_websocket.h  encode.h  encoder.h  frame_queue.h  mqueue.h  net_stream.h  server.h  stream.h  stream_encode.h  stream_file.h
server-jvh/src/protobuf/: playmessages.proto  videofeed.proto  videostream.proto
server-jvh/src/public_include/videostream/: videostream.h
server-jvh/test/: CMakeLists.txt  tcpstream_test.cc  test_helper.h
shared/: prototcp.cc
shared/include/: prototcp.h
videoplay/: index.html  parrot.webm  proto-videostream.ts  videostream.js
webcam/: camera.c
